# length_aware_paginator

./: Cargo.toml  README.md  readme.tpl
.github/workflows/: deploy.yml  test.yml
src/: lib.rs  model.rs  schema.rs  structs.rs  tests.rs  traits.rs
tests/: db.sql  test.rs
