[package]
name = "length_aware_paginator"
version = "0.1.0"
authors = ["Tibor Hudik <tibor@barrage.net>"]
edition = "2018"
license = "MIT"
keywords = ["pagination", "diesel", "paginate", "per_page", "page"]
description = "Add functionality to diesel query builder to return length aware paginated response"
homepage = "https://www.barrage.net"
repository = "https://github.com/barrage/lenght_aware_paginator"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
diesel = { version = "1.4.5", features = ["postgres"] }
serde = { version = "1", features = ["derive"] }
